VDR Plugin 'dbus2vdr' Revision History
--------------------------------------

2011-03-20: Version 0.0.1

- Initial revision.

2011-03-21: Version 0.0.1a

- use thread pool for handling dbus messages so multiple
  message won't block each other

2011-03-21: Version 0.0.1b

- refactoring of message dispatcher to make it easier to add
  new interfaces

2011-03-22: Version 0.0.1c

- add call to Service method of plugins

2011-03-22: Version 0.0.2

- add new interface for reading epg-data from a file

2011-03-22: Version 0.0.2a

- use system bus, not session bus

2011-03-29: Version 0.0.2b

- add new interface for getting infos about the next timer