@@ -13,5 +13,6 @@ public:
    ///<          1 on success and there are arguments left
 
   static void SendReply(DBusConnection *conn, DBusMessage *msg, int  returncode, const char *message);
+  static void SendReply(DBusConnection *conn, DBusMessage *msg, const char *message);
 };
 #endif
